fixed the calendar layout issue

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -192,7 +192,7 @@
 }
 
 .offer {
-  padding: 120px 0 220px;
+  padding: 120px 0 170px;
   background: $gold;
   color: #fff;
   .icon {
@@ -207,16 +207,17 @@
 }
 
 .calendar {
-  margin-top: 120px;
   text-align: center;
+  max-width: 700px;
+  padding: 5%;
+  margin: 120px auto 0;
   &__title {
     margin-bottom: 34px;
   }
   &__event {
     text-align: left;
     display: flex;
-    justify-content: center;
-    margin-bottom: 34px;
+    margin-bottom: 54px;
     &__date {
       margin-right: 34px;
       font-size: 12px;
@@ -225,6 +226,8 @@
     &__content {
       &__title {
         font-size: 50px;
+        line-height: 55px;
+        margin-top: -7px;
       }
       &__anchors {
         font-size: 20px;
